--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,9 @@
-# Prerequisites
-*.d
+# CLion
+.idea/
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# CMake build dir
+cmake-build-debug/
 
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-
-# debug information files
-*.dwo
+# OS cache
+Thumbs.db
+.DS_Store
